--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: python
 
 python:
-  - "2.7"
   - "3.5"
 
 install:
@@ -9,7 +8,7 @@ install:
   - "pip install codecov"
 
 script:
-  - "coverage run tests/test_seqsim.py"
+  - "coverage run tests/test_ngesh.py"
 
 after_success:
   - "codecov"
