--- a/.codacy.yml
+++ b/.codacy.yml
@@ -2,5 +2,6 @@ exclude_paths:
     - "AUTHORS.md"
     - "README.md"
     - "CONTRIBUTING.md"
+    - "CODE_OF_CONDUCT.md"
     - "manuscript/*"
     - "tests/*.py"
