--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,6 @@ include README.md
 include AUTHORS.md
 include CONTRIBUTING.md
 include LICENSE
+include CODE_OF_CONDUCT.md
 include requirements.txt
 include examples/*
