Update manuscript (and .gitignote for latex files)

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
 # Manuscript LATEX intermediate files
 paper.aux
+paper.bbl
 paper.bcf
+paper.blg
+paper.fdb_latexmk
+paper.fls
+paper.log
 paper.out
-paper.pdf
 paper.run.xml
 paper.tex
+paper.xdv
+texput.log
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
